attached_assets/Pasted--BABEL-Note-The-code-generator-has-deoptimised-the-styl_1772486877407.txt
[BABEL] Note: The code generator has deoptimised the styling of /home/runner/workspace/client/src/pages/consultant-ai-config.tsx as it exceeds the max of 500KB.
[replit-cartographer] Error processing /home/runner/workspace/client/src/pages/consultant-voice-calls.tsx: SyntaxError: Identifier 'User' has already been declared. (53:2)
    at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
    at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1507:19)
    at declareName (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/scope.ts:72:21)
    at declareNameFromIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:852:16)
    at checkIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:847:12)
    at checkLVal (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:739:12)
    at finishImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3229:10)
    at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3486:17)
    at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4387:20)
    at parseNamedImportSpecifiers (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3447:36)
    at parseImportSpecifiersAndAfter (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3179:37)
    at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3148:17)
    at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:2973:28)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:647:25)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3223:20)
    at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:482:17)
    at parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:419:17)
    at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1443:16)
    at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1417:10)
    at parseProgram (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:229:10)
    at parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:203:25)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/parser/index.ts:88:25)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4337:20)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/index.ts:86:38)
    at TransformPluginContext.handler (/home/runner/workspace/node_modules/@replit/vite-plugin-cartographer/dist/index.mjs:74:23)
    at PluginContainer.transform (/home/runner/workspace/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:49100:19)
    at loadAndTransform (/home/runner/workspace/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:51978:49) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'VarRedeclaration',
  loc: Position { line: 53, column: 2, index: 1807 },
  pos: 1807,
  syntaxPlugin: undefined
}
9:27:00 PM [vite] Internal server error: /home/runner/workspace/client/src/pages/consultant-voice-calls.tsx: Identifier 'User' has already been declared. (53:2)

  51 |   Clock,
  52 |   Calendar,
> 53 |   User,
     |   ^
  54 |   Search,
  55 |   Loader2,
  56 |   RefreshCw,
  Plugin: vite:react-babel
  File: /home/runner/workspace/client/src/pages/consultant-voice-calls.tsx:53:2
  51 |    Clock,
  52 |    Calendar,
  53 |    User,
     |    ^
  54 |    Search,
  55 |    Loader2,
      at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
      at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1507:19)
      at declareName (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/scope.ts:72:21)
      at declareNameFromIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:852:16)
      at checkIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:847:12)
      at checkLVal (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:739:12)
      at finishImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3229:10)
      at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3486:17)
      at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4387:20)
      at parseNamedImportSpecifiers (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3447:36)
      at parseImportSpecifiersAndAfter (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3179:37)
      at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3148:17)
      at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:2973:28)
      at parseStatementContent (/home/runner/workspace/node_modules/@babel/par